# Filter_Control

./: ._filter_control.egg-info  .gitignore  CONTRIBUTING.md  Changelog  Changelog.md  FC_Launch.sh  GAFP_basic_commands.md  LICENSE.md  README.md  VERSION  filter_controller.py  pyproject.toml  requirements.txt  test_filter_controller.py
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  GAFP_basic_commands.md
filter_control/: __init__.py  filter_controller.py
